Polish for launch: accurate metrics, global commands, softened claims
- Update example metrics to match real crypto_portfolio_api data (4 days vs 3 weeks, 110+ commits)
- Add Option 2: Global commands installation for reusability
- Soften Cursor compatibility claim (not verified)
- Update example NOW.md with realistic production data
- Reflect actual project state (live on RapidAPI, PyPI published)
- More accurate timeline and accomplishments

--- a/examples/crypto-portfolio-api/NOW.md.example
+++ b/examples/crypto-portfolio-api/NOW.md.example
@@ -1,161 +1,140 @@
 # Crypto Portfolio API
 
-**Last Updated:** 2026-01-15  
-**Status:** Production Ready
+**Last Updated:** 2026-01-12  
+**Status:** Production - Live on RapidAPI & PyPI
 
 ---
 
 ## Recent Accomplishments
 
-### 2026-01-15 - Deployment & Documentation
-**Purpose:** Prepare API for production deployment
+### 2026-01-12 - Marketing & Distribution (Session 3)
+**Purpose:** Market the API and get initial users
 
 **What Was Done:**
-- Generated comprehensive OpenAPI/Swagger documentation
-- Set up Docker Compose for easy deployment
-- Created deployment guide with environment variable requirements
-- Added health check endpoint for monitoring
+- Submitted to 8 awesome-lists (awesome-python, awesome-crypto, etc.)
+- Created comprehensive documentation site
+- Published CLI tool to PyPI as `coinpulse`
+- Listed API on RapidAPI marketplace
 
 **Impact:**
-- API is now deployment-ready
-- Clear documentation for users and future development
-- Easy local development setup via Docker
+- PRs submitted to top awesome-lists for visibility
+- Professional documentation increases trust
+- PyPI package makes it easy for developers to try
+- RapidAPI listing provides discovery channel
 
-**Commits:** a1b2c3d, e4f5g6h
+**Commits:** 7c8d9e0, 1f2a3b4
 
-### 2026-01-14 - Portfolio Analytics
-**Purpose:** Provide users with insights into their portfolio performance
+### 2026-01-12 - Production Deployment (Session 2)
+**Purpose:** Deploy API to production and make it publicly accessible
 
 **What Was Done:**
-- Implemented ROI calculation across all holdings
-- Added asset allocation breakdown (by coin, by exchange)
-- Created historical value tracking endpoint
-- Added profit/loss calculations with cost basis
+- Deployed to Fly.io at coinpulse.fly.dev
+- Set up production PostgreSQL database
+- Configured environment variables and secrets
+- Added health check and monitoring endpoints
+- Implemented rate limiting for production use
 
 **Impact:**
-- Users can now see portfolio performance metrics
-- Allocation insights help with rebalancing decisions
-- Historical tracking enables performance analysis
+- API is now live and accessible to the public
+- Production database ensures data persistence
+- Rate limiting prevents abuse
+- Ready for real users
 
-**Commits:** i7j8k9l, m0n1o2p
+**Commits:** 5e6f7a8, 9b0c1d2
 
-### 2026-01-12 - Caching & Performance
-**Purpose:** Reduce external API calls and improve response times
-
-**What Was Done:**
-- Implemented Redis caching layer for exchange API responses
-- Added price data caching with 1-minute TTL
-- Optimized database queries with proper indexing
-- Added rate limiting to prevent API abuse
-
-**Impact:**
-- Response times down from ~2s to ~200ms average
-- Exchange API costs reduced by 85%
-- Better user experience with snappy responses
-
-**Commits:** q3r4s5t, u6v7w8x
-
-### 2026-01-10 - Exchange Integrations
-**Purpose:** Support multiple exchanges for comprehensive portfolio tracking
+### 2026-01-12 - Core Features Complete (Session 1)
+**Purpose:** Complete all core API functionality
 
 **What Was Done:**
-- Integrated Coinbase Pro API for holdings and transactions
-- Integrated Kraken API for holdings and transactions
-- Built abstraction layer for unified exchange interface
+- Implemented portfolio aggregation across multiple exchanges
 - Added real-time price fetching from CoinGecko
+- Built authentication system with JWT
+- Created all CRUD endpoints for portfolio management
+- Added comprehensive test suite (78% coverage)
 
 **Impact:**
-- Users can track holdings across 2 major exchanges
-- Real-time portfolio value calculations
-- Foundation for adding more exchanges easily
+- All planned features implemented and working
+- Secure user authentication in place
+- Tests ensure reliability
+- Ready for deployment
 
-**Commits:** y9z0a1b, c2d3e4f
+**Commits:** 3d4e5f6, a1b2c3d
 
-### 2026-01-08 - Authentication & Security
-**Purpose:** Secure user accounts and API access
+### 2026-01-09 - Initial Setup
+**Purpose:** Bootstrap project structure and tooling
 
 **What Was Done:**
-- Implemented JWT-based authentication
-- Added bcrypt password hashing
-- Created user registration and login endpoints
-- Added API key authentication for programmatic access
+- Set up FastAPI project with proper structure
+- Configured PostgreSQL database with SQLAlchemy
+- Added testing framework (pytest)
+- Created NOW.md and /next command
+- Initial git repository setup
 
 **Impact:**
-- Secure user account system
-- Multiple authentication methods for flexibility
-- Ready for multi-user deployment
+- Clean project foundation
+- Testing infrastructure from day one
+- Now-next methodology in place for iterative development
 
-**Commits:** g5h6i7j, k8l9m0n
-
-### 2026-01-05 - Database & Core API
-**Purpose:** Establish foundational data model and CRUD operations
-
-**What Was Done:**
-- Designed PostgreSQL schema for users, portfolios, holdings
-- Set up SQLAlchemy ORM with migrations
-- Created FastAPI application structure
-- Implemented basic CRUD endpoints for portfolios
-
-**Impact:**
-- Solid data foundation for the application
-- Clean API structure ready for feature additions
-- Database migrations for schema evolution
-
-**Commits:** o1p2q3r, s4t5u6v
+**Commits:** 1a2b3c4, 5d6e7f8
 
 ---
 
 ## Current Status
 
-API is feature-complete and production-ready. All core functionality implemented and tested. Docker deployment configured. Comprehensive documentation available.
+✅ **LIVE IN PRODUCTION**
+- API deployed at coinpulse.fly.dev
+- Listed on RapidAPI marketplace
+- CLI tool published to PyPI (`pip install coinpulse`)
+- 8 awesome-list PRs submitted for promotion
 
-Ready for production deployment pending infrastructure decisions.
+**Current Focus:** User acquisition and feedback gathering
 
 ---
 
 ## Open Challenges
 
 ### Technical
-- None blocking - all core features working
+- Need to add more exchange integrations (Binance, Gemini)
+- Consider adding webhook notifications for price alerts
 
 ### Business/Product
-- Decide on hosting platform (AWS, DigitalOcean, etc.)
-- Determine pricing model (free tier, subscription, etc.)
-- Plan for scaling strategy if user base grows
+- Get first 10 active users
+- Gather feedback on feature priorities
+- Decide on monetization strategy (currently free)
 
 ---
 
 ## Next Steps
 
-1. **Production Deployment**
-   - Choose hosting platform
-   - Set up production database
-   - Configure SSL/TLS certificates
-   - Deploy Docker containers
+1. **User Acquisition**
+   - Follow up on awesome-list PRs
+   - Post on Reddit (r/cryptocurrency, r/python)
+   - Share on ProductHunt
+   - Create demo video for landing page
 
-2. **Monitoring & Observability**
-   - Add application logging (structured logs)
-   - Set up error tracking (Sentry or similar)
-   - Create dashboards for key metrics
-   - Configure alerts for downtime
+2. **Feedback & Iteration**
+   - Monitor RapidAPI analytics
+   - Track PyPI download metrics
+   - Gather user feedback via GitHub issues
+   - Prioritize features based on requests
 
-3. **Additional Features** (Post-MVP)
-   - Wallet address tracking (not just exchanges)
-   - Email notifications for significant price changes
-   - Tax reporting / capital gains calculations
-   - Mobile app for portfolio monitoring
+3. **Feature Enhancements** (based on user feedback)
+   - Add more exchange integrations
+   - Implement webhook notifications
+   - Add historical portfolio tracking
+   - Consider tax reporting features
 
 ---
 
 ## Quick Reference
 
-| Command | Purpose |
-|---------|---------|
-| `/next` | Continue development iteration |
-| `docker-compose up` | Start local development environment |
-| `pytest` | Run test suite |
-| `alembic upgrade head` | Run database migrations |
-| `uvicorn main:app --reload` | Start API server (dev mode) |
+| Resource | Link/Command |
+|----------|--------------|
+| **Production API** | https://coinpulse.fly.dev |
+| **RapidAPI Listing** | https://rapidapi.com/coinpulse |
+| **PyPI Package** | `pip install coinpulse` |
+| **Run Tests** | `pytest` |
+| **Development Command** | `/next` |
 
 ---
 
